--- a/css/footer.042715.1.scss
+++ b/css/footer.042715.1.scss
@@ -88,7 +88,7 @@ section.footer section.quickLink {
 		font-size: $basefontsize;
 		margin-bottom: 28%;
 
-		@include transitionEffectAllEaseOut(0.4s);
+		@include transitionEffectAllEaseOut(1s);
 		&:hover {
 			color: $themeYellow;
 		}
@@ -142,6 +142,8 @@ section.recentBlogs {
 		color: black;
 		font-weight: bold;
 		padding: 3.5% 8% 3.5% 8%;
+
+		@include transitionEffectAllEaseOut(0.4s);
 	}
 
 	aside.blogHeadline .meta {
@@ -153,6 +155,8 @@ section.recentBlogs {
 		h4 {
 			line-height: $baselineheight*1.45;
 			margin-bottom: 5%;
+
+			@include transitionEffectAllEaseOut(0.4s);
 		}
 
 		&:hover > h4 {
@@ -239,6 +243,13 @@ section.contactinfo aside.socialIcons {
 		justify-content:center;
 		align-content:center;
 
+		@include transitionEffectAllEaseOut(0.4s);
+		&:hover {
+			background: $themeYellow;
+			color: black;
+			// font-weight: bold;
+		}
+
 		&::before {
 			font-size: $basefontsize*1.3;
 		}
@@ -319,11 +330,13 @@ section.copyright {
 	}
 }
 
+// copyright
 section.copyright div.copyright {
 	//flex child
 	flex: 1 50%;
 }
 
+// nav menu
 section.copyright nav {
 	//flex child
 	// flex: 1 50%;
@@ -338,6 +351,13 @@ section.copyright nav {
 	align-content: space-between;
 
 	// margin-left: 3%;
+	
+	a {
+		@include transitionEffectAllEaseOut(0.4s);
+		&:hover {
+			color: $themeYellow;
+		}
+	}
 }
 // // END COPYRIGHT ------------------------------------------------
 
