--- a/css/nav.042715.1.scss
+++ b/css/nav.042715.1.scss
@@ -204,6 +204,8 @@ header.navMenu nav {
 		@include flexboxSettings041715a;
 		justify-content: center;
 		align-content: center;
+		// justify-content: space-between;
+		// align-content: space-between;
 
 		// set width to max
 		width: 100%;
