--- a/css/style.scss
+++ b/css/style.scss
@@ -82,6 +82,14 @@ p {
 }
 
 ////////////////////////////////////////////
+///// 		COMPANY LOGO
+///////////////////////////////////////////////
+
+@import 'company.logo.043015.1';
+
+///////////////////////////////////////////////
+
+////////////////////////////////////////////
 ///// 		NAV
 ///////////////////////////////////////////////
 
