--- a/includes/nav.042715.1.jade
+++ b/includes/nav.042715.1.jade
@@ -74,15 +74,40 @@ header.navMenu.nav042715
 			//- +linkTemplate042115a('Sales-Off',saleOffLink)
 			//- +linkTemplate042115a('Lookbook',lookbookLink)
 			//- +linkTemplate042115a('This Week',thisWeekLink)
-
+		
 			ul
+				//- +linkTemplate033115a('New Arrivals',newArrivalsLink)
+				//- +linkTemplate033115a('Women',womenLink)
+				//- +linkTemplate033115a('Men',menLink)
+				//- +linkTemplate033115a('Accessories',accessoriesLink)
+				//- +linkTemplate033115a('Dress',dressLink)
+				//- +linkTemplate033115a('Sales-Off',saleOffLink)
+				//- +linkTemplate033115a('Lookbook',lookbookLink)
+				//- +linkTemplate033115a('This Week',thisWeekLink)
+
 				+linkTemplate033115a('New Arrivals',newArrivalsLink)
+					li
+						a(href=newArrivalsLink) New Arrivals
 				+linkTemplate033115a('Women',womenLink)
+					li
+						a(href=womenLink) Women
 				+linkTemplate033115a('Men',menLink)
+					li
+						a(href=menLink) Men
 				+linkTemplate033115a('Accessories',accessoriesLink)
+					li
+						a(href=accessoriesLink) Accessories
 				+linkTemplate033115a('Dress',dressLink)
+					li
+						a(href=dressLink) Dress
 				+linkTemplate033115a('Sales-Off',saleOffLink)
+					li
+						a(href=saleOffLink) Sales-Off
 				+linkTemplate033115a('Lookbook',lookbookLink)
+					li
+						a(href=lookbookLink) Lookbook
 				+linkTemplate033115a('This Week',thisWeekLink)
+					li
+						a(href=thisWeekLink) This Week
 
 ////////////////////////////////////////////
